--- a/styles.css
+++ b/styles.css
@@ -5,5 +5,14 @@ body {
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228)
+    border-bottom: solid 2px rgb(42, 122, 228);
+     margin: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228);
+}
+
+setion {
+    background: rgb(184, 156, 213);
+    padding-bottom: 80px;
+    padding-top: 80px;
 }
