--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     color: white;
     background: black;
     margin: 0px;
+     font-family: "Chakra Petch", sans-serif;
 }
 
 header {
@@ -11,8 +12,22 @@ header {
     color: rgb(42, 122, 228);
 }
 
-setion {
+section {
     background: rgb(184, 156, 213);
     padding-bottom: 80px;
     padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
 }
