--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ header {
     color: rgb(42, 122, 228);
 }
 
-section {
+.chamada {
     background: rgb(184, 156, 213);
     padding-bottom: 80px;
     padding-top: 80px;
@@ -31,3 +31,19 @@ h1 {
 p {
     font-size: 20px;
 }
+img {
+    height: 200px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x:auto;
+    gap: 10px;
+}
+
+section {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+
