--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     background: black;
     margin: 0px;
      font-family: "Chakra Petch", sans-serif;
+     margin-bottom: 100px;
 }
 
 header {
@@ -31,9 +32,6 @@ h1 {
 p {
     font-size: 20px;
 }
-img {
-    height: 200px;
-}
 
 .categoria-videos {
     display: flex;
@@ -44,6 +42,20 @@ img {
 section {
     padding-left: 20px;
     padding-right: 20px;
+    margin-top: 50px;
 }
 
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border:1px solid green;
+}
+
+.categoria h2{
+    color: rgb(42, 122, 228);
+}
 
